--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -31,8 +31,10 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
+  background-color: #F2F2F2;
+  overflow: auto;
 }
 
 h1 {
