Ajustes na estilizacao base

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -32,9 +32,9 @@ body {
   display: flex;
   place-items: center;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   background-color: #F2F2F2;
-  overflow: auto;
+  /* overflow: auto; */
 }
 
 h1 {
